corrected overflow, added contact method

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+/* * { */
+/*   border: solid 1px green; */
+/* } */
 
 :root {
   font-family: 'Open Sans', sans-serif;
@@ -6,14 +9,19 @@
   background: #FDFDF0;
   letter-spacing: 0.1rem;
 }
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 header {
   height: 100svh;
-  width: 100svw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 50px;
+  overflow-x: hidden;
 }
 
 header h1 {
